2792 [File Indexer]         removed the container warning when using the FFMS indexer
2791 [OneClick]             added video track name. feature request #537
                            removed the possibility to delete tracks with DEL/BACKSPACE
2790 [File Indexer]         fixed MPLS handling (regression of 2787)
2789 [Chapter]              fixed non-ASCII handling (regression of 2753). bug #898
2788 [x264]                 adjusted --b-adapt default value for "--preset slow"
2787 [AVS Script Creator]   added mpls as supported input type
     [File Indexer]         added mpls as supported input type
     [File Indexer]         do not reset the output path when selecting a different indexer if the path has already been set
2786 [DGIndex* Indexer]     all: support absolute paths in the index files when written with Full_Path_In_Files=0
                            IM/NV: ensure that ResponseOnAudioMismatch=0 is not set (if set, it will be set to 1)
2785 [Nero AAC Encoder]     if VBR is used the profile will automatically be selected
2784 [AVS Script Creator]   fixed DirectShowSource/AVISource not available if the portable AviSynth is used (regression of 2761). bug #896
                            DirectShowSource/AVISource are disabled by default and have to be enabled in the MeGUI settings
2783 [AVS Script Creator]   improved the file extension filters of the "video input" file open dialogue
2782 [L-SMASH Indexer]      delete always the index file after it has been copied (and not only when "delete intermediate files" is selected)(regression of 2757)
2781 [Settings]             removed "improved AVS opening" setting. It is now always enabled.
2780 [Update]               removed the abort button
2779 [Xvid]                 added a workaround to be able to use Xvid in portable AviSynth mode
2778 [Chapter]              fixed non-ASCII handling (regression of 2753). bug #898
2777 [Settings]             changed the default value of "delete completed jobs" to be enabled